--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,8 +25,20 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": "./",
     "paths": {
+      "@assets/*": [
+        "src/assets/*"
+      ],
       "@components/*": [
         "src/components/*"
+      ],
+      "@config/*": [
+        "src/config/*"
+      ],
+      "@features/*": [
+        "src/features/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
       ],
       "@pages/*": [
         "src/pages/*"
@@ -34,10 +46,19 @@
       "@services/*": [
         "src/services/*"
       ],
-      "@common/*": [
-        "src/common/*"
+      "@types": [
+        "src/types"
       ],
-    },
+      "@types/*": [
+        "src/types/*"
+      ],
+      "@utils": [
+        "src/utils"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ]
+    }
   },
   "include": [
     "src"
