--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -45,14 +45,11 @@
       "@types": [
         "src/types"
       ],
-      "@types/*": [
-        "src/types/*"
-      ],
       "@utils": [
         "src/utils"
       ],
-      "@utils/*": [
-        "src/utils/*"
+      "@contexts/*": [
+        "src/contexts/*"
       ]
     }
   },
